@@ -1,0 +1,7 @@
+<?php
+
+return array(
+    'after' => array(
+        'ezjscore',
+    )
+);
