@@ -3,7 +3,9 @@ CHANGELOG
 Version 1.1
 -------------------------------------------------------------------------------
 * Added nor-NO translation
-- Fixed bug #16160: Call to undefined function ezi18n()
+* Fixed bug #16160: Call to undefined function ezi18n()
+* Implemented enhancement #016711: Making extension aware of the
+  order/priority in which they need to be loaded
 * added ini file to silence wrong suggestions to alter oracle db in system
   upgrade check page
 
